--- a/fronte/app/index.html
+++ b/fronte/app/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>URL Shortener</title>
+    <link rel="icon" type="image/png" href="../public/favicon.ico" />
+    <link href="./styles/public/style.css" rel="stylesheet" type="text/css" />
+    <script src="./main.js"></script>
   </head>
 
   <body>
-    <div id="root"></div>    
+    <h1>ori</h1>
+    <h1>URL Shortener Microservice</h1>
+    <main>
+      <section>
+        <form action="api/shorturl/new" method="POST">
+          <fieldset>
+            <legend>URL Shortener</legend>
+            <label for="url_input">URL:</label>
+            <input
+              id="url_input"
+              type="text"
+              name="url"
+              placeholder="https://www.freecodecamp.org/"
+            />
+            <input type="submit" value="POST URL" />
+          </fieldset>
+        </form>
+      </section>
+    </main>
+    <footer>
+      <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
+    </footer>
   </body>
 </html>
